-fix problem to dockerize project.